added rabbitmq and celery to docker-compose. CUSTOM STATS SYSTEM

--- a/site/templates/bans/ban_table.html
+++ b/site/templates/bans/ban_table.html
@@ -70,7 +70,7 @@
                                     </td>
                                 </tr>
                                 <tr align="left">
-                                    <td width="30%" height="16" >FooBar User Profile</td>
+                                    <td width="30%" height="16" >Thicc Forum Profile</td>
                                     <td height="16" >
                                         {% if ban.user %}
                                             <a href = {% url 'djangobb:forum_profile' ban.user.user.username %}>{{ ban.user.user.username }}</a>
@@ -124,7 +124,7 @@
                                                     <br/>
                                                     <li><s>Contest this Ban</s></li>
                                                     <br/>
-                                                    <li>You can only contest your own bans. If this is your steam account being banned, be sure your steam account is linked to your FooBar Gaming account <a href = ""</li>
+                                                    <li>You can only contest your own bans. If this is your steam account being banned, be sure your steam account is linked to your Thicc Gaming account <a href = ""</li>
                                                 {% endif %}
                                             {% else %}
                                                 <br/>
