--- a/site/templates/base-actual.html
+++ b/site/templates/base-actual.html
@@ -211,12 +211,13 @@
         <script src="{% static 'js/hover-v2.js' %}"></script>
         <script src="{% static 'js/js-main.js' %}"></script>
         <script>
-            $(window).on('load',function(){
-                $(".tsv_serverinfo").children().hide();
-                $("a[href*='1101118']").text("");
-                $("div[style='margin-top:16px; margin-left:0; margin-bottom:16px;']").hide();
+            //$(window).on('load',function(){
+                //$(".tsv_serverinfo").children().hide();
+                //$("a[href*='1101118']").text("");
+                //$("#discord-widget").contents().find(".widget-btn-connect").hide()
+                //$("div[style='margin-top:16px; margin-left:0; margin-bottom:16px;']").hide();
 
-            });
+            //});
         </script>
         {% block extra_js %}{% endblock %}
 
