--- a/site/templates/includes/nav-main-top.html
+++ b/site/templates/includes/nav-main-top.html
@@ -5,7 +5,7 @@
             <div class="container">
                 <a href="#" data-activates="nav-main-side" class="button-collapse" id="main-nav-bar-button-collapse"><i class="fa fa-fw fa-bars"></i><span> Menu</span></a>
                 <span id="nav-main-bar-brand">
-                    FooBar<br />
+                    Thicc<br />
                     Gaming
                 </span>
                 <ul id="nav-main-bar" class="hide-on-med-and-down menu-border-effect">
