--- a/site/templates/includes/nav-main-side.html
+++ b/site/templates/includes/nav-main-side.html
@@ -1,8 +1,7 @@
 {% load i18n pages_tags %}
 <nav class="side-nav" id="nav-main-side">
     <div id="nav-main-side-brand">
-        FooBar<br />
-        Gaming
+        Thicc <br />Gaming
     </div>
     <ul>
         {% page_menu 'pages/menus/tree.html' %}
