--- a/site/templates/base-actual.html
+++ b/site/templates/base-actual.html
@@ -126,7 +126,7 @@
                         </h1>
                         <h2 id="site-slogan">
                             {% if request.path == '/gmod/' %}
-                                <a href="/">Where the Cops Get Their Training</a>
+                                <a href="/">Where the Headcrabs Succ</a>
 
                             {% elif request.path == '/wow/' %}
                                 <a href="/">Where the Deathknights Learn to Sound Cool</a>
