--- a/site/templates/copyright/copyright.html
+++ b/site/templates/copyright/copyright.html
@@ -9,7 +9,7 @@
 
     <div class="content-container">
         <h4>{% trans 'Copyright' %}</h4>
-        <p>{% blocktrans %}FooBarGaming.com is Licensed under the MIT License. The terms of the license are as follows:{% endblocktrans %}</p>
+        <p>{% blocktrans %}Both ThiccGaming.com and Thicc.io are Licensed under the MIT License. The terms of the license are as follows:{% endblocktrans %}</p>
     </div>
     <div class="content-container">
         <p class="no-padding-top">
@@ -19,7 +19,7 @@
                 The MIT License
             </p>
             <p>
-                Copyright (c) 2017 FooBar Gaming.
+                Copyright (c) 2017 Thicc Gaming.
             </p>
             <p>
                 Permission is hereby granted, free of charge, to any person obtaining a copy
