--- a/site/templates/gmod/gmod.html
+++ b/site/templates/gmod/gmod.html
@@ -9,7 +9,7 @@
 
 {#    <div class="content-container">#}
 {#        <h4>{% trans 'Coming Soon' %}</h4>#}
-{#        <p class="no-padding-top">{% blocktrans %}Stay updated by joining our <a href = "http://steamcommunity.com/groups/FooBarGaming">Steam Group</a> to#}
+{#        <p class="no-padding-top">{% blocktrans %}Stay updated by joining our <a href = "http://steamcommunity.com/groups/Thicc-Gaming">Steam Group</a> to#}
 {#                                                  be notified when our upcoming servers open up! We will be having#}
 {#                                                  huge give aways and prizes for the first day of each servers'#}
 {#                                                  opening, so staying connected is crucial.{% endblocktrans %}#}
