--- a/site/templates/l4d2/l4d2.html
+++ b/site/templates/l4d2/l4d2.html
@@ -173,7 +173,7 @@
         <h3>{% trans "Rush!" %}</h3>
         <p>
             {% blocktrans %}
-                FooBar Gaming Is L4D2's best rush server. Your goal is to get to the safe house / extraction as
+                Thicc Gaming Is L4D2's most custom modded rush server. Your goal is to get to the safe house / extraction as
                 fast as you can while keeping as many of your teammates alive as possible. Only a true pro's pro
                 can achieve the latter.
             {% endblocktrans %}
@@ -202,11 +202,6 @@
             {% blocktrans %}
                 We hope you have a great time on our server, and ask that you consider donating to the community so
                 we can keep this server and others like it up and running!
-            {% endblocktrans %}
-        </p>
-        <p>
-            {% blocktrans %}
-                -Hankey
             {% endblocktrans %}
         </p>
     </div>
