--- a/site/templates/rules/rules.html
+++ b/site/templates/rules/rules.html
@@ -9,7 +9,7 @@
 
 {#    <div class="content-container">#}
 {#        <h4>{% trans 'Coming Soon' %}</h4>#}
-{#        <p class="no-padding-top">{% blocktrans %}Stay updated by joining our <a href = "http://steamcommunity.com/groups/FooBarGaming">Steam Group</a> to#}
+{#        <p class="no-padding-top">{% blocktrans %}Stay updated by joining our <a href = "http://steamcommunity.com/groups/Thicc-Gaming">Steam Group</a> to#}
 {#                                                  be notified when our upcoming servers open up! We will be having#}
 {#                                                  huge give aways and prizes for the first day of each servers'#}
 {#                                                  opening, so staying connected is crucial.{% endblocktrans %}#}
@@ -96,7 +96,7 @@
         <h4>{% trans 'Anti-Harrassment Policy' %}</h4>
         <p>
         {% blocktrans %}
-            FooBar Gaming does not tolerate harrassment. Its stupid.
+            Thicc Gaming does not tolerate harrassment. Its stupid.
         {% endblocktrans %}
         </p>
         <ul class="restyle-list list-items-mar-bottom list-mar-bottom description-list">
@@ -120,7 +120,7 @@
 
         <p>Failure to abide by these rules will result in disciplinary action, the terms of which will be determined by the administrator presiding over the case.</p>
 
-        <p class="no-padding-top">FooBar Gaming prides itself in its commitment to promoting the equal treatment and representation of all members of the community, while denouncing harassment of any kind, including racism and the use of any racist terms.</p>
+        <p class="no-padding-top">Thicc Gaming is a gaming community, a place where all people should enjoy having fun. This means denouncing harassment of any kind, including racism and the use of any racist terms.</p>
 
         <dt class="text-highlight">TL;DR don't be a dick to your community members.</dt>
 
