--- a/site/templates/about/about.html
+++ b/site/templates/about/about.html
@@ -10,8 +10,8 @@
     <div class="content-container">
         <h4>{% trans 'About' %}</h4>
 
-        <p>{% blocktrans %}The FooBar Gaming Community was made by <a href="https://steamcommunity.com/id/m1str_hankey" rel="nofollow" target="_blank">m1str hankey</a>.{% endblocktrans %}</p>
-        <p class="no-padding-top">{% blocktrans %}FooBarGaming.com is made from open-source code using Django with Python. The website was made in collaboration with Azelphur, and can be found on <a href = "https://github.com/aldenjenkins/foobargamingwebsite">GitHub here</a>{% endblocktrans %}</p>
+        <p>{% blocktrans %}The Thicc Gaming Community was made by <a href="https://steamcommunity.com/id/m1str_hankey" rel="nofollow" target="_blank">m1str hankey</a>.{% endblocktrans %}</p>
+        <p class="no-padding-top">{% blocktrans %}ThiccGaming.com is made from open-source code using Django with Python. The website was made in collaboration with Azelphur<a href = "https://github.com/aldenjenkins/thiccgaming.com">GitHub here</a>{% endblocktrans %}</p>
     </div>
 
 
