--- a/site/templates/djangobb_forum/profile/profile_menu.html
+++ b/site/templates/djangobb_forum/profile/profile_menu.html
@@ -2,22 +2,24 @@
 <div class="row">
 	<div class="col s12">
 		<ul class="tabs-top-menu">
-			<li class="tab col s6 m4 l2">
+			<li class="tab col s6 m4 l2" style="width:20%;">
 				<a {%if active_menu == "essentials" %}class="active" {% endif %}href="{% url 'djangobb:forum_profile_essentials' profile %}">{% trans "Essentials" %}</a>
 			</li>
-			<li class="tab col s6 m4 l2">
+			<li class="tab col s6 m4 l2"style="width:20%;">
 				<a {%if active_menu == "personal" %}class="active" {% endif %}href="{% url 'djangobb:forum_profile_personal' profile %}">{% trans "Personal" %}</a>
 			</li>
+            {% comment %}
 			<li class="tab col s6 m4 l2">
 				<a {%if active_menu == "social" %}class="active "{% endif %}href="{% url 'djangobb:forum_profile' profile %}social/">{% trans "Social Auth" %}</a>
 			</li>
-			<li class="tab col s6 m4 l2">
+            {% endcomment %}
+			<li class="tab col s6 m4 l2"style="width:20%;">
 				<a {%if active_menu == "personality" %}class="active" {% endif %}href="{% url 'djangobb:forum_profile_personality' profile %}">{% trans "Personality" %}</a>
 			</li>
-			<li class="tab col s6 m4 l2">
+			<li class="tab col s6 m4 l2"style="width:20%;">
 				<a {%if active_menu == "display" %}class="active" {% endif %}href="{% url 'djangobb:forum_profile_display' profile %}">{% trans "Display" %}</a>
 			</li>
-			<li class="tab col s6 m4 l2">
+			<li class="tab col s6 m4 l2"style="width:20%;">
 				<a {%if active_menu == "privacy" %}class="active" {% endif %}href="{% url 'djangobb:forum_profile_privacy' profile %}">{% trans "Privacy" %}</a>
 			</li>
 		</ul>
