--- a/site/templates/djangobb_forum/reputation_form.html
+++ b/site/templates/djangobb_forum/reputation_form.html
@@ -10,7 +10,7 @@
 		<h3>{% trans "Submit user reputation" %}</h3>
 	    <div class="messages-user-detail mar-bottom">
 	        {% if form.to_user.forum_profile.avatar and form.to_user.forum_profile.show_avatar %}
-	            <img src="{{ form.to_user.forum_profile.avatar.url }}" alt="User Avatar" class="left avatar-messages" />
+	            <img src="{{ form.to_user.forum_profile.avatar }}" alt="User Avatar" class="left avatar-messages" />
 	        {% else %}
 	            {% if forum_settings.GRAVATAR_SUPPORT and form.to_user.forum_profile.show_avatar %}
 	                <img src="{% gravatar form.to_user.email %}" alt="User Avatar" class="left avatar-messages" />
