--- a/site/templates/djangobb_forum/upload_avatar.html
+++ b/site/templates/djangobb_forum/upload_avatar.html
@@ -18,7 +18,7 @@
 				<div class="row">
 					<div class="col s12 input-field">
 						<h5>{% trans "Current Avatar" %}</h5>
-						<img src="{% get_media_prefix %}{{ user.forum_profile.avatar }}" alt="User Avatar" class="left pad-right" />
+						<img src="{{ user.forum_profile.avatar }}" alt="User Avatar" class="left pad-right" />
 						<p>
 							<input id="avatar-clear_id" name="avatar-clear" type="checkbox" />
 							<label for="avatar-clear_id">{% trans "Delete current avatar" %}</label>
