--- a/site/templates/djangobb_forum/user.html
+++ b/site/templates/djangobb_forum/user.html
@@ -19,7 +19,7 @@
             <span class="sub-title">{{ profile.forum_profile.status|default:'Member' }}</span>
         </h3>
         <div class="forum-head-actions">
-			{% if forum_settings.PM_SUPPORT and user.is_authenticated %}<a class="btn" href="{% url 'messages_compose_to' profile %}">{% trans "Private Message" %}</a>{% endif %}
+            {% if forum_settings.PM_SUPPORT and user.is_authenticated %}<a class="btn" href="{% url 'messages_compose_to' profile %}"><i style="font-size:inherit;" class="fa fa-fw fa-envelope"></i> {% trans "Send Private Message" %}</a>{% endif %}
         </div>
     </div>
     <div class="content-container">
@@ -30,7 +30,7 @@
     			{% if profile.first_name or profile.last_name %}
 					{{ profile.first_name }} {{ profile.last_name }}
 				{% else %}
-					{% trans "(Unknown)" %}
+					{% trans "(Not Set)" %}
 				{% endif %}
 			</dd>
     		<dt><strong>{% trans "Location:" %}</strong></dt>
@@ -38,7 +38,7 @@
 				{% if profile.forum_profile.location %}
 					{{ profile.forum_profile.location }}
 				{% else %}
-					{% trans "(Unknown)" %}
+					{% trans "(Not Set)" %}
 				{% endif %}
 			</dd>
 			<dt><strong>{% trans "Website:" %}</strong></dt>
@@ -46,7 +46,7 @@
 				{% if profile.forum_profile.site %}
 					{{ profile.forum_profile.site|urlize }}
 				{% else %}
-					{% trans "(Unknown)" %}
+					{% trans "(Not Set)" %}
 				{% endif %}
 			</dd>
 			{% if forum_settings.USER_TO_USER_EMAIL %}
@@ -63,6 +63,7 @@
 					{% endif %}
 				</dd>
 			{% endif %}
+            <dd style="width:100%;"><a href="http://steamcommunity.com/profiles/{{ profile.social_auth }}"><strong>{% trans "Steam Community Profile" %}</strong></a></dd>
     	</dl>
     </div>
     <div class="content-container">
