--- a/site/templates/includes/nav-main-side.html
+++ b/site/templates/includes/nav-main-side.html
@@ -24,8 +24,8 @@
             </li>
             <li><a href="{% url 'logout' %}?next={{ request.path }}">{% trans 'Log Out' %}</a></li>
         {% else %}
-            <li><a href="{% url 'login' %}?next={{ request.path }}">{% trans 'Log In' %}</a></li>
-            <li><a href="{% url 'signup' %}?next={{ request.path }}">{% trans 'Register' %}</a></li>
+        <li><a href="/login/steam/?next={{ request.path }}"><img style="vertical-align:middle;" src="https://steamcommunity-a.akamaihd.net/public/images/signinthroughsteam/sits_01.png" alt="{% trans 'Log In with Steam' %}"></a></li>
+            {#}<li><a href="{% url 'signup' %}?next={{ request.path }}">{% trans 'Register' %}</a></li>{#}  
         {% endif %}
     </ul>
 </nav>
