--- a/site/templates/includes/nav-main-top.html
+++ b/site/templates/includes/nav-main-top.html
@@ -32,8 +32,8 @@
                         </li>
                         <li class="hide-on-med-and-down"><a href="{% url 'logout' %}?next={{ request.path }}">{% trans 'Log Out' %}</a></li>
                     {% else %}
-                        <li class="hide-on-med-and-down"><a href="{% url 'login' %}?next={{ request.path }}">{% trans 'Log In' %}</a></li>
-                        <li class="hide-on-med-and-down"><a href="{% url 'signup' %}?next={{ request.path }}">{% trans 'Register' %}</a></li>
+                        <li class="hide-on-med-and-down"><a href="/login/steam/?next={{ request.path }}"><img style="vertical-align:middle;" src="https://steamcommunity-a.akamaihd.net/public/images/signinthroughsteam/sits_01.png" alt="{% trans 'Log In with Steam' %}"></a></li>
+                        {#}<li class="hide-on-med-and-down"><a href="{% url 'signup' %}?next={{ request.path }}">{% trans 'Register' %}</a></li>{#}
                     {% endif %}
                     <li><a href="#" id="nav-main-bar-button-search"><i class="fa fa-fw fa-search"></i></a></li>
                 </ul>
