--- a/site/templates/includes/nav-user.html
+++ b/site/templates/includes/nav-user.html
@@ -1,9 +1,9 @@
 {% load i18n %}
 {% if request.user.is_authenticated %}
-    <li><a href="{% url 'djangobb:forum_profile' user.username %}social/">{% trans 'Link Social Auth' %}</a></li>
+    {% comment %}<li><a href="{% url 'djangobb:forum_profile' user.username %}social/">{% trans 'Link Social Auth' %}</a></li>{% endcomment %}
     <li><a href="{% url 'djangobb:forum_profile' user.username %}">{% trans 'Profile' %}</a></li>
     <li><a href="{% url 'logout' %}?next={{ request.path }}">{% trans 'Log Out' %}</a></li>
 {% else %}
-    <li><a href="{% url 'login' %}?next={{ request.path }}">{% trans 'Log In' %}</a></li>
-    <li><a href="{% url 'signup' %}?next={{ request.path }}">{% trans 'Register' %}</a></li>
+    <li><a href="/login/steam/?next={{ request.path }}"><img style="vertical-align:middle;" src="https://steamcommunity-a.akamaihd.net/public/images/signinthroughsteam/sits_02.png" alt="{% trans 'Log In with Steam' %}"></a></li>
+    {#}<li><a href="{% url 'signup' %}?next={{ request.path }}">{% trans 'Register' %}</a></li>{#}
 {% endif %}
