--- a/site/thicc/apps/donations/templates/donations/donate.html
+++ b/site/thicc/apps/donations/templates/donations/donate.html
@@ -22,8 +22,8 @@
         <h3>{% trans "Donate / Premium" %}</h3>
         {% blocktrans %}
             <p>Thanks for considering a donation to our community!</p>
-            <p>Running a large community with multiple servers isn't cheap, our monthly running cost is around $100. So your kind donations will be going towards the costs of our hardware and will enable us to keep growing our community and invest in future improvements!</p>
-            <p>When you donate, will we thank you by making you a premium member, which grants you instant access to the following awesome features on our servers!</p>
+            <p>Running a community with multiple servers isn't cheap. Our monthly running cost is around $100. So your kind donations will be going towards the costs of our hardware and will enable us to keep growing our community and invest in future improvements!</p>
+            <p>When you donate, we will thank you by making you a premium member, which grants you instant access to the following awesome features on our servers!</p>
         {% endblocktrans %}
     </div>
 
@@ -36,9 +36,9 @@
         </ul>
     </div>
     <div class = "content-container">
-        <h4>{% trans "Premium benefits On FooBar Gaming's Left 4 Dead 2 Modded Server" %}</h4>
+        <h4>{% trans "Premium benefits On Thicc Gaming's Left 4 Dead 2 Modded Server" %}</h4>
         <ul class="restyle-list">
-            <li><span class="text-highlight">{% trans 'Moderator powers' %}</span> - {% trans "Start a vote kick/mute" %}</li>
+            <li><span class="text-highlight">{% trans 'Moderation powers' %}</span> - {% trans "Start a vote kick/mute" %}</li>
             <li><span class="text-highlight">{% trans '100 additional points at the beginning of each round' %}</span> - {% trans 'Buy mollys and adrenaline for your friends, too!' %}</li>
 {#            <li><span class="text-highlight">{% trans 'Third person' %}</span> - {% trans 'Get a third person view!' %}</li>#}
 {#            <li><span class="text-highlight">{% trans 'Particle trails' %}</span> - {% trans 'Enable loads of sweet particle trails effects on yourself!' %}</li>#}
@@ -54,8 +54,9 @@
             <li><span class="text-highlight">{% trans 'Premium Scoreboard status' %}</span> - {% trans 'Protect the Mayor as the Special Weapons And Tactics team' %}</li>
         </ul>
     </div>
-    <div class = "content-container">
-        <h4>{% trans "Coming Soon: Premium benefits On Our Garry's Mod FooBar RP" %}</h4>
+    {% comment %}
+    {#<div class = "content-container">
+        <h4>{% trans "Coming Soon: Premium benefits On Our Garry's Mod FooBar RP" %}</h4>#}
 {#          <h6>{% trans 'Premium benefits On {{ gamemode }} Every Server' %}</h6>#}
 {#        <ul class="restyle-list">#}
 {#            <li><span class="text-highlight">{% trans 'Phys Gun' %}</span> - {% trans "Move and Freeze Props" %}</li>#}
@@ -66,9 +67,9 @@
 {#            <li><span class="text-highlight">{% trans 'VIP Equipment' %}</span> - {% trans 'Gain access to equipment including Body Armor, ' %}</li>#}
 {#            <li><span class="text-highlight">{% trans '10% Drug Dealer Purchase Price Increase' %}</span> - {% trans 'Sell your drugs for 10% More than Normal Price' %}</li>#}
 {#        </ul>#}
-    </div>
+{#    </div>
     <div class = "content-container">
-        <h4>{% trans 'Coming Soon: Premium benefits On FooBar Scape - Our RSPS' %}</h4>
+        <h4>{% trans 'Coming Soon: Premium benefits On FooBar Scape - Our RSPS' %}</h4>#}
 {#        <ul class="restyle-list">#}
 {#            <li><span class="text-highlight">{% trans 'Reserved slot' %}</span> - {% trans "There's always space for you!" %}</li>#}
 {#            <li><span class="text-highlight">{% trans 'Premium Coin amount ' %}</span> - {% trans 'Let everyone know you support our community with full team coloured text when you talk!' %}</li>#}
@@ -76,9 +77,9 @@
 {#            <li><span class="text-highlight">{% trans 'RTD buff' %}</span> - {% trans 'Get a 70% chance of a good RTD effect on RTD enabled servers!' %}</li>#}
 {#            <li><span class="text-highlight">{% trans 'ForceTheVote' %}</span> - {% trans 'Start a vote to change to a specific map of your choice on multi-map servers!' %}</li>#}
 {#        </ul>#}
-    </div>
+    {#</div>
      <div class = "content-container">
-         <h4>{% trans 'Coming Soon: Premium benefits On FooBarWoW Funserver' %}</h4>
+         <h4>{% trans 'Coming Soon: Premium benefits On FooBarWoW Funserver' %}</h4>#}
 {#        <ul class="restyle-list">#}
 {#            <li><span class="text-highlight">{% trans 'Reserved slot' %}</span> - {% trans "There's always space for you!" %}</li>#}
 {#            <li><span class="text-highlight">{% trans 'Premium chat status' %}</span> - {% trans 'Let everyone know you support our community with full team coloured text when you talk!' %}</li>#}
@@ -86,8 +87,9 @@
 {#            <li><span class="text-highlight">{% trans 'Particle trails' %}</span> - {% trans 'Enable loads of sweet particle trails effects on yourself!' %}</li>#}
 {#            <li><span class="text-highlight">{% trans 'RTD buff' %}</span> - {% trans 'Get a 70% chance of a good RTD effect on RTD enabled servers!' %}</li>#}
 {#            <li><span class="text-highlight">{% trans 'ForceTheVote' %}</span> - {% trans 'Start a vote to change to a specific map of your choice on multi-map servers!' %}</li>#}
-{#        </ul>#}
-     </div>
+{#        </ul>
+     </div>#}
+     {% endcomment %}
 
 
     <div class="row row-no-marg-bottom">
@@ -136,7 +138,7 @@
 {#        <h4>{% trans 'Donate with TF2 keys' %}</h4>#}
 {#        <p class="no-padding-top">{% blocktrans %}Aren't able to donate with real money but still want access to these fantastic features? Well, you can now donate using TF2 keys! The process is automated and amazingly simply. Just add <a href="https://steamcommunity.com/id/azelbot" rel="nofollow" target="_blank">AzelBot</a> on Steam, send it a trade request and add some keys! 1 key will get you a week, 3 keys a month and 5 keys 3 months.{% endblocktrans %}</p>#}
 {#    </div>#}
-    <p class="no-padding-top"><small class="grey-text text-darken-1">{% blocktrans %}* By donating to FooBar Gaming, you are not paying for digital goods, we are offering these benefits as a thank you for your kind donation. Donations are non-refundable and do not give you immunity from any server rules.{% endblocktrans %}</small></p>
+    <p class="no-padding-top"><small class="grey-text text-darken-1">{% blocktrans %}* By donating to Thicc Gaming, you are not paying for digital goods, we are offering these benefits as a thank you for your kind donation. Donations are non-refundable and do not give you immunity from any server rules.{% endblocktrans %}</small></p>
 
     {% if not steam and user.is_authenticated %}
         <div id="modal-steam" class="modal">
